# obs-timestamp-plugin

./: .gitignore  CMakeLists.txt  GITHUB_SETUP.md  README.md
.github/workflows/: build.yml
data/: timestamp_to_premiere.py
data/locale/: en-US.ini
src/: plugin-main.c  timestamp-plugin.c  timestamp-plugin.h
